hphp/test/zend/good/ext/spl/tests/iterator_count.php
<?php
$array=array('a','b');

$iterator = new ArrayIterator($array);

iterator_count();


iterator_count($iterator,'1');

iterator_count('1');


?>