hphp/test/zend/bad/ext-spl/fixedarray_005.php
<?php

$b = new stdClass;

$a = new SplFixedArray($b);

?>